# height_mapping

./: .gitignore  .gitmodules  README.md
.devcontainer/gpu/: devcontainer.json
.devcontainer/no_gpu/: devcontainer.json
docker/: .env  Dockerfile  docker-compose-no-gpu.yml  docker-compose.yml
scripts/: setup.bash
src/height_mapping/: CMakeLists.txt  package.xml
src/height_mapping/config/: height_mapping.yaml  height_spoofing.yaml  hieght_mapping.yaml
src/height_mapping/include/: HeightMapping.hpp
src/height_mapping/launch/: height_mapping.launch.py  height_spoof.launch.py
src/height_mapping/rsc/: stepping_stones.xml
src/height_mapping/rviz/: heightmap.rviz  heightspoof.rviz
src/height_mapping/src/: HeightMapping.cpp  HeightMappingNode.cpp  HeightMappingSpoofNode.cpp
src/height_mapping/test/: test_height_mapping.cpp  test_pole_occlusion.cpp  test_stair_occlusion.cpp  test_stair_occlusion_multipos.cpp
