<?xml version="1.0"?>
<package format="3">
  <name>height_mapping</name>
  <version>0.2.0</version>
  <description>Axis-aligned big grid + robot-aligned subgrid with occlusion brushfire fill</description>
  <maintainer email="wcompton@caltech.edu">you</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>opencv</depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>opencv</depend>

  <export/>
</package>
